--- a/train/index.html
+++ b/train/index.html
@@ -55,7 +55,7 @@
                     <input id="dest-input" class="form-control" type="text">
                 </div>
                 <div class="form-group">
-                    <label for="first-input">First Train Time (HH:mm - military time)</label>
+                    <label for="first-input">First Train Time</label>
                     <input id="first-input" class="form-control" type="time">
                 </div>
                 <div class="form-group">
